--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,5 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm
 test.png
+staticImg_OUTPUT/
+vidtoIMG_OUTPUT/
