--- a/.gitignore
+++ b/.gitignore
@@ -243,6 +243,6 @@ fabric.properties
 .idea/codestream.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm
-test.png
 staticImg_OUTPUT/
 vidtoIMG_OUTPUT/
+generateData_OUTPUT/
